--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,6 +3,7 @@ version: 0.0.2
 author: James Ots <code@jamesots.com>
 description: IRC client library
 homepage: https://github.com/jamesots/irc_client
+documentation: http://jamesots.github.io/irc_client/docs/
 dev_dependencies:
   unittest: any
   http: any
