--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,8 @@ author: James Ots <code@jamesots.com>
 description: IRC client library
 homepage: https://github.com/jamesots/irc_client
 documentation: http://jamesots.github.io/irc_client/docs/
+dependencies:
+  logging: any
 dev_dependencies:
   unittest: any
   http: any
